<resources>
    <string name="app_name">43-background-work</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_account_register">You don\'t have an account? Register NOW!</string>
    <string name="register">Register</string>
    <string name="select_breed_and_images">Select breed and images</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>